...
    allowEmptyString = false}) async {
  bool confirmed = false;
  String currentValue = sharedPreferences.getString(key) ?? defaultValue ?? "";
  TextEditingController textController =
      TextEditingController(text: currentValue);
  TextField textField = TextField(
    key: const ValueKey("myTextField"),
    controller: textController,
  );
  // ignore: deprecated_member_use
  Widget cancelButton = ElevatedButton(
    child: Text(cancelText),
    onPressed: () {
      Navigator.of(context).pop();
    },
  );
  // ignore: deprecated_member_use
  Widget continueButton = ElevatedButton(
    key: const ValueKey("continueButton"),
    child: Text(confirmText),
    onPressed: () async {
      String newValue = textController.text.trim();
      if (newValue == "" && !allowEmptyString) {
        print("Not setting empty string for $key");
      } else {
...
