...
                fontSize: fontSize,
                fontWeight: FontWeight.w700,
              ),
            ),
            const Padding(padding: EdgeInsets.only(top: 15)),
            ElevatedButton(
                key: const ValueKey("enterPrivateKeyButton"),
                onPressed: () async => await runUpdatePrivateKeyDialog(context),
                child: const Text(
                  "Enter private key",
                  style: TextStyle(fontSize: fontSize),
                )),
            const Padding(padding: EdgeInsets.only(top: 25)),
...
